--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build APK
+name: Build APK with Ant
 
 on:
   push:
@@ -18,19 +18,15 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-        cache: gradle
         
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Set up Android SDK
+      uses: malinskiy/action-android/install-sdk@release/0.1.2
       
-    - name: Build with Gradle
-      run: ./gradlew build
-      
-    - name: Build APK
-      run: ./gradlew assembleDebug
+    - name: Build with Ant
+      run: ant debug
       
     - name: Upload APK
       uses: actions/upload-artifact@v3
       with:
         name: app-debug
-        path: app/build/outputs/apk/debug/app-debug.apk
+        path: bin/DRRRBotAndroidApp-debug.apk
