--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,14 @@ jobs:
     - name: Build with Ant
       run: ant debug
       
+    - name: Create output directory
+      run: mkdir -p app/build/outputs/apk/debug
+      
+    - name: Copy APK to output directory
+      run: cp bin/DRRRBotAndroidApp-debug.apk app/build/outputs/apk/debug/ || echo "APK not found"
+      
     - name: Upload APK
       uses: actions/upload-artifact@v3
       with:
         name: app-debug
-        path: bin/DRRRBotAndroidApp-debug.apk
+        path: app/build/outputs/apk/debug/DRRRBotAndroidApp-debug.apk
