Update GitHub Actions workflow to install Ant and fix SDK setup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,10 @@ jobs:
         distribution: 'temurin'
         
     - name: Set up Android SDK
-      uses: malinskiy/action-android/install-sdk@release/0.1.2
+      uses: malinskiy/action-android/setup-sdk@v1
+      
+    - name: Install Ant
+      run: sudo apt-get update && sudo apt-get install -y ant
       
     - name: Build with Ant
       run: ant debug
