--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,16 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
         
     - name: Set up Android SDK
-      uses: malinskiy/action-android/setup-sdk@v1
+      uses: malinskiy/action-android/setup-sdk@release/0.1.4
       
     - name: Install Ant
       run: sudo apt-get update && sudo apt-get install -y ant
@@ -35,7 +35,7 @@ jobs:
       run: cp bin/DRRRBotAndroidApp-debug.apk app/build/outputs/apk/debug/ || echo "APK not found"
       
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: app-debug
         path: app/build/outputs/apk/debug/DRRRBotAndroidApp-debug.apk
