--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,19 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         
     - name: Set up Android SDK
       uses: android-actions/setup-android@v3
+      with:
+        cmdline-tools-version: 12.0
+        packages: |
+          platforms;android-28
+          build-tools;30.0.3
       
     - name: Install Ant
       run: sudo apt-get update && sudo apt-get install -y ant
@@ -28,7 +33,7 @@ jobs:
     - name: Set up Android project
       run: |
         echo "sdk.dir=/usr/local/lib/android/sdk" > local.properties
-        android update project --path . --target android-28
+        /usr/local/lib/android/sdk/tools/bin/android update project --path . --target android-28
       
     - name: Build with Ant
       run: ant debug
